--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Kayin Leong's Services</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="canonical" href="https://services.kayinleong.tech" />
+    <link rel="canonical" href="https://services.kayinleong.com" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <!-- SEO -->
@@ -16,11 +16,11 @@
     <meta name="keywords" content="Kayin, Kayin Leong, LKY, lky, KY, ky, Kayin Leong's Portfolio, Kayin Leong Portfolio, Kayin Portfolio, Leong Portfolio, Portfolio, portfolio," />
 
     <!-- OG -->
-    <meta property="og:url" content="https://services.kayinleong.tech" />
+    <meta property="og:url" content="https://services.kayinleong.com" />
     <meta property="og:title" content="Kayin Leong's Services" />
     <meta property="og:site_name" content="Kayin Leong's Services" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://services.kayinleong.tech/assets/images/Kayin_White.webp" />
+    <meta property="og:image" content="https://services.kayinleong.com/assets/images/Kayin_White.webp" />
     <meta property="og:locale" content="en_GB" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta property="og:description" content="Kayin Leong's Portfolio Website,
@@ -41,7 +41,7 @@
     <meta name="twitter:description" content="Kayin Leong's Portfolio Website,
       check this out to know me about me, drop me an email if you are interested
       to hire me!" />
-    <meta name="twitter:image" content="https://services.kayinleong.tech/assets/images/Kayin_White.webp" />
+    <meta name="twitter:image" content="https://services.kayinleong.com/assets/images/Kayin_White.webp" />
 
     <style>
       .splash {
